# Ray-Tracing

./: Cargo.toml  image.ppm
src/: aabb.rs  camera.rs  color.rs  hittable.rs  hittable_list.rs  interval.rs  main.rs  material.rs  random.rs  ray.rs  sphere.rs  texture.rs  utility.rs  vec3.rs
src/hittable/: hit_record.rs  hittable_list.rs  hittable_object.rs
src/hittable/hittable_object/: bvh_node.rs  sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs
src/texture/: checker.rs  solid_color.rs
