[package]
name = "raytracin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0"
rand = "0"
glam = "0"


# [profile.release]
# codegen-units = 1
# lto = "fat"
# panic = "abort"
# strip = "debuginfo"


# [build]
# rustflags = ["-C", "target-cpu=native"]
